# old-portfolio

./: .gitignore  Dockerfile  porftolio.cabal  portfolio.cabal
app/: Main.hs
src/: App.hs  Base.hs  BaseCss.hs  Blog.hs  Configuration.hs  Db.hs  Error.hs  Init.hs  Pages.hs  PagesCss.hs  PortMonad.hs  Server.hs
src/Db/: Blog.hs  Functions.hs
src/Pages/: Base.hs  CSS.hs  Contact.hs  Home.hs
src/Server/: Contact.hs  Files.hs  Home.hs
