cabal-version:      3.0
name:               porftolio
version:            0.1.0.0
synopsis:           My Portfolio page
homepage:           https://isaac025.com/home.html
license:            BSD-3-Clause
license-file:       LICENSE
author:             Isaac Lopez
maintainer:         isaac.lopez@upr.edu
category:           Web
build-type:         Simple
extra-doc-files:    README.md

common warnings
    ghc-options: -Wall

executable porftolio
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        porftolio

    hs-source-dirs:   app
    default-language: Haskell2010

library
    import:           warnings
    exposed-modules:  
        Pages
        Server
        PagesCss
        PortMonad
    default-extensions:
        DataKinds
        TypeOperators
        TypeApplications
        OverloadedStrings
        DeriveFunctor
        DerivingVia
        GeneralizedNewtypeDeriving
    build-depends:    base ^>=4.17.2.1
                    , servant
                    , servant-server
                    , servant-lucid
                    , lucid
                    , clay
                    , text
                    , mtl
                    , warp
    hs-source-dirs:   src
    default-language: Haskell2010
