cabal-version:      3.0
name:               porftolio
version:            0.1.0.0
synopsis:           My Portfolio page
homepage:           https://isaac025.com/home.html
license:            BSD-3-Clause
license-file:       LICENSE
author:             Isaac Lopez
maintainer:         isaac.lopez@upr.edu
category:           Web
build-type:         Simple
extra-doc-files:    README.md

common warnings
    ghc-options: -Wall

executable portfolio
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.1
                    , porftolio
    hs-source-dirs:   app
    default-language: Haskell2010

library
    import:           warnings
    exposed-modules:  
        Server
        Pages
        Pages.Home
        Pages.Contact
        Pages.Base
        Pages.CSS
    default-extensions:
        ImportQualifiedPost
        OverloadedStrings
        DataKinds
        TypeOperators
    build-depends:    base ^>=4.17.2.1
                    , servant
                    , servant-server
                    , servant-lucid
                    , bytestring
                    , lucid
                    , clay
                    , text
                    , wai
                    , warp
    hs-source-dirs:   src
    default-language: Haskell2010
